--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,15 @@
-sudo: false
+sudo: required
+
+services:
+  - docker
+
 language: go
 
 go:
 - 1.8.3
+
+after_success:
+  - make
+  - make docker
+  - make push
+  - if [[ -n "$TRAVIS_TAG" ]]; then make crossbuild release; fi
